--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name":        "hubot-partychat",
+  "name":        "hubot-partychat-hooks",
   "version":     "0.1.0",
   "author":      "Ian Young",
-  "keywords":    "github hubot partychat adapter",
-  "description": "A Partychat adapter for hubot",
+  "keywords":    "github hubot partychat-hooks adapter",
+  "description": "A Partychat-hooks adapter for hubot",
   "dependencies": {
     "hubot": "https://github.com/github/hubot/tarball/master"
   },
-  "main": "./hubot-partychat",
+  "main": "./src/partychat",
   "engine": "node ~0.4.12"
 }
